# chatbot-rs-recv

./: Cargo.toml  test
src/: backend-cli.rs  backend-gui.rs  gui.rs  main.rs
src/gui/: backend_gui.rs  ui.rs
